# ceti-whale-sounds

./: .gitignore  CHANGELOG.md  CLAUDE.md  FIXES_IMPLEMENTED.md  IMPLEMENTATION_COMPLETE.md  PARAMETER_FIXES_SUMMARY.md  README.md  app.py  demo_parameter_effects.py  project-plan.md  pyproject.toml  requirements.txt  test_improvements.py  test_parameter_fixes.py  test_real_whale_data.py
data/raw/watkins/: README.md
scripts/: download_sample_data.py
src/: click_detector.py  coda_detector.py  feature_extractor.py
