[project]
name = "ceti-whale-sounds"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    "jupyter>=1.1.1",
    "matplotlib>=3.10.3",
    "numpy>=2.3.2",
    "pandas>=2.3.1",
    "plotly>=6.2.0",
    "scipy>=1.16.1",
    "soundfile>=0.13.1",
    "streamlit>=1.47.1",
    "torchaudio>=2.7.1",
]
